v2.0.2 - Fixed dissapearing text bug when everything center aligned

--- a/resources/static/imageSelect.css
+++ b/resources/static/imageSelect.css
@@ -6,8 +6,8 @@
 {
     /* Element */
 	display:inline-block;
-    width: 130px;
-    height: 60px;
+    /*width: 130px;*/
+    /*height: 60px;*/
 	margin:0 0 5px 5px;
     vertical-align:middle;
 	cursor:pointer;
